--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,3 +1,74 @@
+
 h1 {
-   color: darkblue 
+   text-align: center;
+   color: darkblue;
+   margin-bottom: 32px;
 }
+
+h2 {
+   margin-top: 32px;
+   color: #0056b3;
+}
+
+.form-title {
+   font-size: 50px;
+   margin-bottom: 40px;
+   color: navy;
+}
+
+.form-group {
+   display: flex;
+   flex-direction: column;
+   margin-bottom: 5px;
+}
+
+label {
+   font-weight: bold;
+   margin-bottom: 1px;
+   font-size: 15px;
+}
+
+input,
+textarea {
+   padding: 0.5rem;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   font-size: 15px;
+}
+
+button {
+   background-color: rgb(2, 51, 2);
+   color: white;
+   border: none;
+   padding: 12px 24px;
+   font-size: 15px;
+   border-radius: 5px;
+}
+
+.button-group {
+	display: flex;
+	gap: 12px;
+	justify-content: center;
+}
+
+.button-group button {
+	width: 200px; 
+}
+
+
+footer {
+   padding: 32px;
+   background-color: #f5f5f5;
+   text-align: center;
+   font-size: 15px;
+   color: #444;
+}
+
+section {
+   max-width: 700px;
+   margin: 0 auto;
+   padding: 32px;
+   line-height: 1.8;
+   color: #333;
+}
+
